# librnr

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  android.cmake
apkmodder/: apkmodder.ps1
librnr-experiments/: README.md
network-measurement-scripts/: ipbw.sh  iperf_download_ams.json  iperf_download_sfo.json  iperf_upload_ams.json  measurebw.sh
scripts/: README.Rmd  initmeasurebattery.ps1  installbench.ps1  rename-traces.py  runbench.ps1  sample-host-metrics.py
scripts/clumsy-scripts/: README.md
scripts/network-emulate/: README.md  Verizon-LTE-driving.up  create-vm.ps1  mahimahi.py  net-delay-static.ps1  net-rule.json
src/: layer.cpp  layer.hpp  layer_bootstrap.cpp  layer_bootstrap.hpp  layer_dllmain.cpp  layer_shims.cpp  logger.cpp  logger.h  manifest.json.template  pch.h  tracer.cpp  tracer.hpp
traces/: README.md  Results.md  Results.rmd
traces/20231130-a-iperf-e-flight-src-ams-dst-sfo-airline-klm/: README.Rmd
traces/20231130-network-flight_ams_to_sfo_klm/: iperf_upload_sfo.json  mbw.sh
traces/20231210-webbrowser_beatsaber-flight_sfo_to_ams_klm/: README.Rmd
traces/20231231-trace-beatsaber-mqp-beatsaber-replay-accuracy-validation-1/: 31-12-2023_20-34-21-record-sync.txt  31-12-2023_20-54-33-replay-sync.txt  notes.txt  record-HardwareMonitoring.txt  replay-HardwareMonitoring.txt
traces/20231231-trace-beatsaber-mqp-beatsaber-replay-accuracy-validation-2/: notes.txt  record-host.txt  replay-host.txt  replay-sync.txt
traces/20231231-trace-beatsaber-mqp-popstars-replay-accuracy-validation/: replay-haptic-trace.txt  replay-recording_host.txt
traces/20240116-a-azsq-d-mqp-l-2-m-record-i-1/: command.txt
traces/20240116-a-gorillatag-d-mqp-l-16-m-record-i-1/: command.txt
traces/20240116-a-gorillatag-d-mqp-l-16-m-replay-i-1/: command.txt
traces/20240116-a-moss-d-mqp-l-16-m-replay-i-1/: apk-package-dumpsys.txt  command.txt
traces/20240116-a-vrchat-d-mqp-l-16-m-record-i-1/: apk-package-dumpsys.txt
traces/20240116-m-record-d-mqp-a-azsq-l-16-i-1/: command.txt
traces/20240116-m-record-d-mqp-a-azsq-l-2-i-1/: apk-package-dumpsys.txt
traces/20240116-m-record-d-mqp-a-gorillatag-l-2-i-1/: command.txt
traces/20240116-m-record-d-mqp-a-gorillatag-l-2-i-2/: apk-package-dumpsys.txt
traces/20240116-m-record-d-mqp-a-vrchat-l-16-i-1/: command.txt
traces/20240116-m-replay-d-mqp-a-gorillatag-l-2-i-1/: apk-package-dumpsys.txt
traces/20240116-m-replay-d-mqp-a-gorillatag-l-2-i-2/: apk-package-dumpsys.txt
traces/20240116-trace-azsq-mqp-16m-n1/: apk-package-dumpsys.txt
traces/20240116-trace-azsq-mqp-16m-replay-n1/: apk-package-dumpsys.txt  command.txt
traces/20240116-trace-gorillatag-mqp-16m-n1/: apk-package-dumpsys.txt
traces/20240116-trace-gorillatag-mqp-16m-replay-n1/: apk-package-dumpsys.txt
traces/20240116-trace-gorillatag-mqp-2m-n1/: apk-package-dumpsys.txt
traces/20240116-trace-gorillatag-mqp-2m-n2/: command.txt
traces/20240116-trace-gorillatag-mqp-2m-replay-n1/: command.txt
traces/20240116-trace-gorillatag-mqp-2m-replay-n2/: command.txt
traces/20240116-trace-moss-mqp-16m-n1/: apk-package-dumpsys.txt  command.txt
traces/20240116-trace-moss-mqp-2m/: apk-package-dumpsys.txt  command.txt  trace.txt
traces/20240116-trace-moss-mqp-4m-n1/: apk-package-dumpsys.txt  command.txt
traces/20240117-m-record-d-mqp-a-explorevr-l-16-i-1/: apk-package-dumpsys.txt
traces/20240117-trace-explorevr-mqp-16m-n1/: command.txt
traces/20240117-trace-explorevr-mqp-16m-replay-n1/: apk-package-dumpsys.txt  command.txt
traces/20240118-a-gorillatag-d-mq3-l-16-m-replay-i-6/: command.txt
traces/20240118-a-gorillatag-d-mq3-l-16-m-replay-i-8/: apk-package-dumpsys.txt
traces/20240118-a-vrchat-d-mq2-l-16-m-replay-i-1/: command.txt
traces_model/: traces_model.ipynb
(+215 files in other folders)
